compiler/tools/fpp-check/test/state_machine/typed_elements/sm_initial_bad_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/sm_initial_bad_action_type.fpp:4.16
  initial do { a } enter S
               ^
error: type mismatch at initial transition
type of initial transition is None
type of action is U32
